1.Functionality added to Create Test button - Create-Test.fxml, create-test.css, CreateTestController added - code is working properly 2.CreateAccountController modified: - some libraries removed - method String getTextOf(TextField textField) replaced with textField.getText() 3.DBUtilities modified: - createRecord() renamed to createUser() - createTest() method added 4.InvalidInputMessages modified: - new CODE enum added 5.TeachersHomePageController modified: - functionality added to Create Test button 6.Utilities modified: - some libraries removed - closeLastStage() simplified - new case Create-Test.fxml added to prepareScene() 7.ValidationRegexes modified: - new CODE enum added